--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
    
     <% }  else { %>
           <!-- If no recipe yet, show: -->
-     <h2>Pick your favourite taco ingredient 👆</h2>
+     <h2>Pick your favourite prefered Taco Type 👆</h2>
      <!-- Else, show the recipe name e.g. <h2>Recipe name</h2>-->
     <% } %> 
    
